Bug 392413 - Opening corrupted .kra files does not show message box
Summary: Opening corrupted .kra files does not show message box
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-27 14:36 UTC by Alvin Wong
Modified: 2018-04-03 11:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvin Wong 2018-03-27 14:36:56 UTC
Tested with a corrupted .kra file and an .kra file with 0 bytes. Krita doesn't do anything when trying to open the file, no message box, no logs.
Comment 1 Halla Rempt 2018-03-28 12:03:39 UTC
Git commit f3a5eaec2eebe90bdec7eec78f0cdd0491fd8a6e by Boudewijn Rempt.
Committed on 28/03/2018 at 12:02.
Pushed by rempt into branch 'master'.

Return the proper import status on loading a file

Setting it to OK unconditionally is wrong...

M  +1    -0    libs/ui/KisDocument.cpp
M  +0    -2    libs/ui/KisImportExportManager.cpp
M  +1    -1    plugins/impex/kra/kra_import.cpp

https://commits.kde.org/krita/f3a5eaec2eebe90bdec7eec78f0cdd0491fd8a6e
Comment 2 Halla Rempt 2018-04-03 11:48:18 UTC
Git commit 353816d20fd0b048834319db8f94062190bc1ecf by Boudewijn Rempt.
Committed on 03/04/2018 at 11:17.
Pushed by rempt into branch 'krita/4.0'.

Return the proper import status on loading a file

Setting it to OK unconditionally is wrong...
(cherry picked from commit f3a5eaec2eebe90bdec7eec78f0cdd0491fd8a6e)

M  +1    -0    libs/ui/KisDocument.cpp
M  +0    -2    libs/ui/KisImportExportManager.cpp
M  +1    -1    plugins/impex/kra/kra_import.cpp

https://commits.kde.org/krita/353816d20fd0b048834319db8f94062190bc1ecf