Return the proper import status on loading a file

Setting it to OK unconditionally is wrong...

BUG:392413
(cherry picked from commit f3a5eaec2eebe90bdec7eec78f0cdd0491fd8a6e)